Reorganizing promotional material
Assets are now organized instead of just at the root directory.
We have a README.md so we can use the github page as a shorter link to share.

--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
 	"short_name": "Sisyphus",
 	"description": "Make SIS a little less ugly.",
 	"author": "Kai",
-	"version": "0.0.2",
+	"version": "0.1.0",
 	"icons": {
-		"128": "logo128.png"
+		"128": "webstore_assets/logos/logo128.png"
 	},
 	"content_scripts": [
 		{
