Reorganization, horizontal page tabs, and info icons
Site-map-specific stuff moved to its own file.
General plaintable stuff labelled correctly
Page tab stuff moved up and improved to be horizontal rather than vertical.
Info icons are now a normal 'i' in a circle rather than the cursive "Info" icon that was there before.

--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,13 @@
 	"short_name": "Sisyphus",
 	"description": "Make SIS a little less ugly.",
 	"author": "Kai",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"icons": {
 		"128": "logo128.png"
 	},
 	"content_scripts": [
 		{
-			"css": ["defines.css", "app.css", "header.css", "footer.css", "weekly_schedule.css"],
+			"css": ["defines.css", "app.css", "header.css", "footer.css", "info.css", "weekly_schedule.css", "site_map.css"],
 			"matches": ["https://sis.rpi.edu/*"]
 		}
 	],
