--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,13 @@
 	},
 	"content_scripts": [
 		{
-			"css": ["defines.css", "app.css", "header.css", "footer.css", "info.css", "weekly_schedule.css", "site_map.css"],
+			"css": ["defines.css", "app.css", "header.css", "footer.css", "info.css", "weekly_schedule.css", "site_map.css", "emergency_contacts.css"],
+			"matches": ["https://sis.rpi.edu/*"]
+		}
+	],
+	"web_accessible_resources": [
+		{
+			"resources": ["page_assets/*"],
 			"matches": ["https://sis.rpi.edu/*"]
 		}
 	],
